[tool.poetry]
name = "python-pytorch"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.26.3"
pandas = "^2.2.0"
torch = "^2.2.0"
jupyterlab = "^4.1.0"
scikit-learn = "^1.4.0"
optuna = "^3.5.0"
jupyterlab-code-formatter = "^2.2.1"
black = "^24.2.0"
isort = "^5.13.2"
optuna-dashboard = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
